--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,13 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+@layer utilities {
+  .clip-diagonal {
+    clip-path: path(
+      "M 10,40 L 70,40 A 10,10 0,0,0 80,30 L 80,10 A 10,10 0,0,1 90,0 L 140,0 A 10,10 0,0,1 150,10 L 150,190 A 10,10 0,0,1 140,200 L 10,200 A 10,10 0,0,1 0,190 L 0,50 A 10,10 0,0,1 10,40 Z"
+    );
+  }
+}
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
